objects/NDA__c.object
<CustomObject>
    <description>Object created for Investors Tracker Team and a request to store Non-Disclosure Agreements 
One of the requirements is an Expiration Date field</description>
    <fields>
        <fullName>Investor_Account__c</fullName>
        <label>Investor Account</label>
        <referenceTo>Investor_Account__c</referenceTo>
        <relationshipLabel>NDAs</relationshipLabel>
        <relationshipName>NDAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NDA_Expiration_Date__c</fullName>
        <description>Expiration Date of a Non-Disclosure Agreement (for the M&amp;A team)</description>
        <label>NDA Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NDA Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NDAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NDA_Status__c</fullName>
        <description>Status of the NDA</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Approaching Expiration</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDA_Technology_Cover__c</fullName>
        <label>NDA Technology Cover</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onshore Wind</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regions_Covered__c</fullName>
        <label>Regions Covered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Nordics</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <label>NDA</label>
    <nameField>
        <label>NDA Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NDAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>